@@ -1,4 +1,4 @@
-# FIFA22 ALT-Tab Disable
+# FIFA22 Disable Disconnect on Alt-Tab
 
 FUCK YOU, EA! 🖕
 
@@ -11,6 +11,17 @@ address etc taken from [beck123](https://www.elitepvpers.com/forum/members/59950
 * new value: `CC CC CC CC CC CC CC C3 90 90 90 48 83 3D EC 16`
 * length: 16 bytes
 
+## usage
+
+1. start FIFA22
+2. run latest fuck-ea.exe from [releases page](https://github.com/f4bio/fifa22-alt-tab-disable/releases)
+
+### undo / enable alt-tab disconnect again
+
+1. restart game
+
+_no easy way to do this for now - sorry; might be implemented some time soon(tm)..._
+
 ## manual usage
 
 ```powershell
@@ -21,10 +32,10 @@ address etc taken from [beck123](https://www.elitepvpers.com/forum/members/59950
 
 * [1337patch](https://github.com/chausner/1337patch) - thanks bro!
 
-## build instructions
+## build exe yourself
 
 ```powershell
-Invoke-ps2exe "fuck-ea.ps1" -outputFile .\dist\ -version 0.0.1 -noOutput -noVisualStyles
+Invoke-ps2exe "fuck-ea.ps1" -outputFile .\dist\ -version 1.3.38 -noOutput -noVisualStyles
 ```
 
 ### build requirements
